--- a/proj2/gleam.toml
+++ b/proj2/gleam.toml
@@ -17,6 +17,7 @@ gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 gleam_otp = ">= 1.1.0 and < 2.0.0"
 birl = ">= 1.8.0 and < 2.0.0"
 gleam_erlang = ">= 1.3.0 and < 2.0.0"
+argv = ">= 1.0.2 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
