--- a/proj3/gleam.toml
+++ b/proj3/gleam.toml
@@ -18,6 +18,7 @@ gleam_otp = ">= 1.2.0 and < 2.0.0"
 gleam_crypto = ">= 1.5.1 and < 2.0.0"
 gleam_erlang = ">= 1.3.0 and < 2.0.0"
 argv = ">= 1.0.2 and < 2.0.0"
+simplifile = ">= 2.3.0 and < 3.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
